[package]
name = "common"
version = "0.1.0"
authors = ["doobs"]
edition = "2018"

[dependencies]
enum_primitive = "0.1.1"
piston = "0.37.0"
piston2d-graphics = "0.26.0"
piston2d-opengl_graphics = "0.53.0"
pistoncore-glutin_window = "0.47.0"
rand = "0.5.5"

uniq_comp_id = { path = "../uniq_comp_id" }
uniq_comp_id_derive = { path = "../uniq_comp_id_derive" }
